<resources>
    <string name="app_name">EC 도서관</string>
    <string name="member">회원</string>
    <string name="book">도서</string>
    <string name="borrowing">대출</string>
    <string name="add">+</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="borrowingTime">대출 일시</string>
    <string name="expiryTime">대출 만료 일시</string>
    <string name="timeExample">2019-09-09 09:23</string>
    <string name="returnTime">반납 일시</string>
</resources>
